--- a/pom.xml
+++ b/pom.xml
@@ -41,6 +41,13 @@
 			<artifactId>aws-java-sdk</artifactId>
 			<version>1.12.159</version>
 		</dependency>
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<version>1.18.22</version> <!-- Use the latest version -->
+			<scope>provided</scope> <!-- Lombok is only needed at compile time -->
+		</dependency>
+
 	</dependencies>
 
 	<build>
